# python-todo

./: .gitignore  README.md  check_tools_installed.py  mypy.ini  pyproject.toml  python-new.code-workspace  todos.json
.devcontainer/: Dockerfile  devcontainer.json
src/: check_tools_installed.py  example.py
src/todo/: cli.py  models.py
tests/: test_example.py
