# pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todo-app"
version = "0.1.0"
description = "A clean, typed, idiomatic Python todo CLI"
requires-python = ">=3.12"
dependencies = ["typer>=0.12.0"]
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
todo = "todo.cli:app"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "UP", "B", "N", "SIM", "C90"]
ignore = ["E501"]  # managed by line-length
src = ["src"]

[tool.ruff.lint.isort]
known-first-party = ["todo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = "src"

[tool.setuptools.packages.find]
where = ["src"]